err/pandoc-gpp.err
Listing '.'...
Listing './bin'...
Compiling './bin/pygal_gen.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/CairoSVG-2.1.3.dist-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/cairocffi'...
Listing './lib/python3.5/site-packages/cairocffi-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/cairosvg'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cssselect'...
Listing './lib/python3.5/site-packages/cssselect-1.0.3.dist-info'...
Listing './lib/python3.5/site-packages/cssselect2'...
Listing './lib/python3.5/site-packages/cssselect2/tests'...
Listing './lib/python3.5/site-packages/cssselect2-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/defusedxml'...
Listing './lib/python3.5/site-packages/defusedxml-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pygal'...
Listing './lib/python3.5/site-packages/pygal/css'...
Listing './lib/python3.5/site-packages/pygal/graph'...
Listing './lib/python3.5/site-packages/pygal/maps'...
Listing './lib/python3.5/site-packages/pygal/test'...
Listing './lib/python3.5/site-packages/pygal-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tinycss'...
Listing './lib/python3.5/site-packages/tinycss/tests'...
Listing './lib/python3.5/site-packages/tinycss-0.4.egg-info'...
Listing './lib/python3.5/site-packages/tinycss2'...
Listing './lib/python3.5/site-packages/tinycss2/css-parsing-tests'...
Listing './lib/python3.5/site-packages/tinycss2-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/webencodings'...
Listing './lib/python3.5/site-packages/webencodings-0.5.1.dist-info'...
Listing './share'...
Listing './share/bin'...
Compiling './share/bin/evaluateExpression.py'...
Compiling './share/bin/generate_graph.py'...
Compiling './share/bin/generate_tabular.py'...
***   File "./share/bin/generate_tabular.py", line 61
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './share/bin/includeFile.py'...
***   File "./share/bin/includeFile.py", line 2
    print '~~~'+sys.argv[1]
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share/doc'...
Listing './share/doc/pandoc-gpp-readme.md'...
Listing './share/python-wheels'...
